<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.themakersdirectory.MainActivity">
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_dark_24dp"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/action_sign_in"
        android:title="@string/action_sign_in" />
    <item
        android:id="@+id/action_sign_out"
        android:title="@string/action_sign_out"
        android:visible="false" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
