<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/onBoardingLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:orientation="vertical"
    tools:context="com.themakersdirectory.OnBoardingActivity">

    <FrameLayout
        android:id="@+id/indx_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/content"
        android:layout_alignParentTop="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/indx_logo" />
    </FrameLayout>


    <ViewFlipper
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:animateFirstView="true"
        android:autoStart="true"
        android:flipInterval="3500"
        android:inAnimation="@android:anim/fade_in"
        android:outAnimation="@android:anim/fade_out">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/on_bording_msg_1"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/on_bording_msg_2"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/on_bording_msg_3"
            android:textSize="20dp" />
    </ViewFlipper>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/lets_make_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startMaking"
            android:text="@string/lets_make" />
    </LinearLayout>

</RelativeLayout>
