<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/cardview_padding"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/card_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/colorPrimary"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/card_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/card_img"
                android:layout_toRightOf="@+id/card_img"
                android:layout_below="@+id/type_text"
                android:fontFamily="sans-serif-light"
                android:padding="@dimen/cardview_details_padding"
                android:text="@string/about"
                android:lines="1"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/type_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/card_img"
                android:layout_toRightOf="@+id/card_img"
                android:fontFamily="sans-serif-light"
                android:gravity="end"
                android:padding="@dimen/cardview_details_padding"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@android:color/black" />

            <android.support.v7.widget.ButtonBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/card_title"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/card_title">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/callButton"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/call" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/locationButton"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location" />

            </android.support.v7.widget.ButtonBarLayout>


        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>